--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "users-app",
   "version": "1.0.0",
+  "homepage": "https://privetdi.github.io/task_1",
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -16,6 +18,8 @@
     "typescript": "4.4.2"
   },
   "scripts": {
+   "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
